--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="quote-box">
+        <h2>Quote of the day</h2>
+        <blockquote>Loading...</blockquote>
+        <span>Loading...</span>
+    </div>
     
 </body>
 </html>
