--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <h2>Quote of the day</h2>
         <blockquote>Loading...</blockquote>
         <span>Loading...</span>
+        <div>
+            <button>New Quote</button>
+            <button>Tweet</button>
+        </div>
     </div>
     
 </body>
